--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../tsconfig",
   "compilerOptions": {
     "declaration": false,
+    "strict": false,
+    "strictNullChecks": false,
     "outFile": "../built/examples.max.js"
   },
   "include": ["index.ts"]
