--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,14 @@
     "module": "amd",
     "target": "es5",
     "declaration": true,
-    "noImplicitAny": false,
+    "noEmitOnError": false,
+    "strict": true,
+    "strictNullChecks": true,
     "outFile": "built/index.js",
     "sourceMap": true,
     "moduleResolution": "classic",
     "baseUrl": "./node_modules",
     "lib": ["esnext", "dom"]
   },
-  "include": ["index.ts", "ol3-draw"]
+  "include": ["index.ts", "ol3-draw/**/*.ts"]
 }
